fixed text overflow on all images

--- a/react-app/src/components/AllImages/AllImages.css
+++ b/react-app/src/components/AllImages/AllImages.css
@@ -137,6 +137,7 @@
   font-size: 18px;
   white-space: nowrap;
   overflow: hidden;
+  margin-left: 10px;
 
   text-overflow: ellipsis;
 }
